# Rahvana

./: .env.example  .gitignore  .gitmodules  GUIDE_Visa_Case_Strength_Checker.md  Gemini.md  README-git.md  README.md  VISA_CASE_STRENGTH_CHECKER_FINAL_README.md  documentation.md  middleware.ts  migrate.js  next.config.mjs  next.config.ts  package-lock.json  package.json  police-verification-integration.md  render.yaml  tailwind.config.ts  tsconfig.json
.agent/: profile-settings-optimization.md
actions/: chat-actions.ts
app/: NewHomePage.html  globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/actions/: contact.ts
app/admin/: page.tsx
app/book-consultation/: page.tsx
app/complete-profile/: page.tsx
app/components/: CityInput.tsx  ColorPicker.tsx  DraggableShape.tsx  DraggableText.tsx  DraggableTextPro.tsx  DynamicForm.tsx  FieldOverlay.tsx  HydrationSafeButton.tsx  ResultsList.tsx  StackedCarousel.tsx  complete-profile-form.tsx  edit-text-modal.tsx  edit-toolbar.tsx  floating-chat-widget.tsx  initial-questions-form.tsx  merge-pdfs.tsx  organize-pages-modal.tsx  pdf-editor.tsx  pdf-thumbnails.tsx  pdf-upload.tsx  pdf-viewer.tsx  shape-formating-toolbar.tsx  shapes-tool.tsx  signup-form.tsx  site-header.tsx  text-editor-toolbar.tsx  (+1 more)
backend/: main.py  pdf_config.py  pyproject.toml  render.yaml  requirements.txt  scraper.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  compress.py  i130_routes.py  iv_schedule.py  pdf_routes.py  remove_bg.py  visa_checker.py  whatsapp.py
backend/app/core/: config.py
backend/app/core/form_configs/: ds260_config.py  i129f_config.py  i130_config.py  i130a_config.py  i693_config.py  i864_config.py  i864a_config.py  i864ez_config.py  i912_config.py
backend/app/routers/: compress.py
backend/app/services/: authority_letter_generator.py  ds260_generator.py  image_service.py  matting_service.py  pdf_filler.py  pdf_service.py  police_letter_generator.py  scraper_service.py  whatsapp_assistant.py
backend/app/services/whatsapp_assistant/: .placeholder  config.py  database.py  main.py  tools.py
backend/app/utils/: pdf_processor.py  validator.py
backend/data/: debug.html  iv_data.csv  iv_data.json
backend/data/forms/: i130-form.json
backend/pdfs/: ds260_question_bank.txt
backend/scripts/: extract_all.py  extract_fields.py  extract_i130_fields.py  fields_output.json  fill_i130_pdf.py  full_mapping_i129f.py  full_mapping_output.py  generate_all_configs.py  generate_clean_i912.py  generate_full_mapping.py  generate_full_ts.py  i129f_full_fields.json  i864a.ts  i864a_config_generated.py  i864a_full_fields.json  i864ez_full_fields.json  i912_full_fields.json  map_i912.py  process_i129f.py  process_i864a.py  run_scraper.py  ts_fields_raw.json  ts_i912.py
data/: birth-certificate-guide-data.json  frc-guide-data.json  interview-intake-questionnaire.json  interview-question-bank.json  passport-guide-data.json  roadmap.ts  visa-case-strength-checker.json
documentations/: CONSULTANT_FEATURE_DOCS.md
lib/: api.ts  cities.ts  formConfig.ts  imageProcessor.ts  notifications.ts  pdf-operations.ts  pdf-utils.ts  pdfjs-browser.ts  progress-tree-store.ts  steps.ts  store.ts
public/: 2.html  Expert Consultancy Booking.md  NewHomePage.html  my.html
scripts/: check-db.ts  check-tables.mjs  create-test-config.mjs  generate_ds260_backend_config.py  generate_ds260_config.py  migrate-database.mjs  parse_ds260.py  reorganize_ds260_subsections.py  run-migration.js  test-insert.ts  test-service-fix.ts  test-slot-service.ts  test-upload.mjs
tests/: merge.test.ts
types/: birth-certificate-wizard.ts  consultation.ts  dom-to-image-more.d.ts  frc-wizard.ts  index.ts  payment.ts  pdfjs-dist.d.ts  profile.ts  roadmap.ts
utils/: pdfHelpers.ts
(+471 files in other folders)
